[package]
name = "nats-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies.bytes]
version="1"

[dependencies.futures]
version = "0.3"

[dependencies.tokio-util]
version="0.6"
features=["codec"]

[dependencies.nom]
version = "7"

[dependencies.memchr]
version = "2.4"

[dependencies.atoi]
version = "0.4"

[dependencies.serde_json]
version = "1"

[dependencies.serde]
version="1"
features=["serde_derive"]
